--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ actix-web = "*"
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
-diesel = { version = "*", features = ["postgres"] }
+diesel = { version = "*", features = ["postgres", "r2d2"] }
 dotenv = "*"
